# breakout

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
levels/: 0.txt  2.txt
src/: Block.cpp  Block.hpp  CMakeLists.txt  GameLogic.cpp  GameLogic.h  Level.cpp  Level.hpp  Rocket.cpp  Rocket.hpp  ball.cpp  ball.hpp  main.cpp  menu_scene.cpp  menu_scene.h  simple_scene.cpp  simple_scene.hpp
src/gui/: CMakeLists.txt  Menu.cpp  Menu.h  Options.cpp  Options.h
